--- a/src/app/Compartido/empleos-vencidos/empleos-vencidos.component.html
+++ b/src/app/Compartido/empleos-vencidos/empleos-vencidos.component.html
@@ -34,12 +34,22 @@
                 </mat-form-field>
 
             </div>
-            <div fxLayoutAlign="row" class="contenedor-botones">
+            <div class=" contenedor-botones desktop">
+            <div fxLayoutAlign="row" >
                 <button class="buscador-boton" mat-button  >
                     Buscar
                 </button>
                 <button class="buscador-boton2" mat-button (click)="limpiar()" >
                     Limpiar filtros
+                </button>
+            </div>
+            </div>
+            <div  class="contenedor-botones movil">
+                <button class="buscador-boton" mat-button  >
+                    Buscar
+                </button>
+                <button class="buscador-boton2" mat-button (click)="limpiar()" >
+                    Limpiar 
                 </button>
             </div>
             
@@ -57,6 +67,8 @@
         <li>¡¡¡ {{mensajeRobot}} !!! </li>
     </ul>
 </div>
+
+<div class="desktop">
 <div class="lista-empleos" fxLayoutAlign="center" >
 
     <div *ngIf="resultados == false" style="color: white; padding-top: 50px;">
@@ -116,7 +128,41 @@
 
     
 </div>
+</div>
 
+<div class="movil">
+    <div class="lista-empleos " fxLayoutAlign="center">
+    
+        <div *ngIf="resultados == false" style="color: white; padding-top: 50px;">
+            <h2>No se encontraron ofertas</h2>
+        </div>
+        <div fxLayout="column" >
+            <div *ngFor="let option of Ofertas; let i = index" >
+    
+                <mat-card class="lista-empleos-card"  >
+                    <img mat-card-image class ="lista-empleos-card-image" [src]="option.foto_perfil" >
+                    <mat-card-content>
+                        <mat-card-title class="card-titulo">
+                            {{option.puesto_empleo}}
+                        </mat-card-title>
+                        <br>
+                        <mat-card-subtitle class="card-subtitulo">
+                            {{option.nombre_empresa}}
+                        </mat-card-subtitle>
+                        <div fxLayoutAlign="space-between">
+                            <span class="card-fecha">Fecha de publicacion: <br> {{option.fecha_publicacion | date:"dd/MM/yy - hh:mm a"}}</span>
+                            <button class="card-boton" mat-button [routerLink]="['/detalle-empleo',option.id]">
+                            Ver detalles
+                            </button>
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+                
+            </div >
+            
+        </div>
+    </div>
+</div>
 
 
 <mat-paginator [pageSizeOptions]="[1,2,4,8]" showFirstLastButtons
